--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 <div class="teclado--botao" onclick="cliclou('3')">3</div>
             </div>
             <div class="teclado--linha">
+                <div class="teclado--botao" onclick="cliclou('4')">4</div>
+                <div class="teclado--botao" onclick="cliclou('5')">5</div>
+                <div class="teclado--botao" onclick="cliclou('6')">6</div>
+            </div>
+            <div class="teclado--linha">
                 <div class="teclado--botao" onclick="cliclou('7')">7</div>
                 <div class="teclado--botao" onclick="cliclou('8')">8</div>
                 <div class="teclado--botao" onclick="cliclou('9')">9</div>
